# SenSE

./: .gitignore  .gitmodules  LICENSE  README.html  README.md  infer_config.toml  pyproject.toml
src/sense/configs/: SenSE_CFM_Base.yaml  SenSE_CFM_Small.yaml  SenSE_LLM_Base.yaml  SenSE_LLM_Small.yaml
src/sense/eval/: eval_dnsmos.py  eval_dnsmos_oval.py  eval_infer_batch.py  eval_infer_cfm_batch.py  eval_intrusive.sh  eval_metrics.py  eval_nisqa.sh  intrusive_se_metrics.py  utils_eval.py
src/sense/eval/NISQA/: run_avg.py
src/sense/eval/NISQA/nisqa/: NISQA_model.py
src/sense/eval/SpeechBERTScore/: speechbertscore.py
src/sense/eval/dnsmos/: dnsmos.py  dnsmos_from_list.py  dnsmos_max.py
src/sense/infer/: REAMD.md  infer.py  infer_cfm.py  infer_llm.py  utils_infer.py
src/sense/infer/examples/enhancement/: clean_ref_en.txt  clean_ref_en_2.txt
src/sense/model/: __init__.py  cfm.py  dataset.py  llama_llm.py  llm.py  modules.py  projector.py  projector_wrapper.py  trainer.py  trainer_cfm.py  trainer_llm.py  utils.py
src/sense/model/backbones/: dit.py  mmdit.py  unett.py
src/sense/model/encoder/: encoder_wrapper.py
src/sense/model/vocoder/: README.md
src/sense/train/: finetune.py  train.py  train_cfm.py  train_llm.py
src/sense/train/datasets/: modify_audio_paths.py  modify_paths_example.py  prepare_custom_data.py  prepare_emilia_se.py  prepare_libritts_noisy.py  prepare_libritts_noisy_token.py  prepare_noise.py  prepare_rir.py
src/sense/train/noisy_datasets/: prepare_libritts_noisy.py  process_one_file.py  run_libritts_noisy.py  test_libritts_noisy.py
(+17 files in other folders)
